<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="umeng_example_home_btn_analytics">Analytics</string>
    <string name="umeng_example_home_btn_xp">XP</string>
    <string name="umeng_example_home_btn_ad">Ads</string>
    <string name="umeng_example_home_btn_tools">Tools</string>
    <string name="umeng_example_home_btn_fb">Feedback</string>
    <string name="umeng_example_home_btn_update">Update</string>
    <string name="umeng_example_home_btn_plus">Socialize</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">Container</string>
    <string name="umeng_example_xp_home_btn_banner">Banner</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"Banner\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">Handler</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"Handler\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">Multi-Pages</string>
    <string name="umeng_example_xp_home_btn_wap">WebView</string>
    <string name="umeng_example_xp_home_btn_custom">Custom</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"WebView\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_push_header">Push AD\n(UFP)</string>
    <string name="umeng_example_xp_home_btn_textlink">Text Link</string>
    <string name="umeng_example_xp_home_btn_container_header">LargeImage</string>
    <string name="umeng_example_xp_home_handler_icons">Icons \n(UFP)</string>
    <string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
    <string name="umeng_example_home_hint_wait">Coming soooooon</string>
    <string name="intro"> The webview before show js call Umeng Analytics APIs</string>
    <string name="hello">Hello World, FragmentActivity!</string>
    <string name="title1">校园文化</string>
    <string name="title2">校园新闻</string>
    <string name="title3">教学科研</string>
    <string name="title4">教师园地</string>
    <string name="title5">学生天地</string>
    <string name="menu_about">关于</string>
    <string name="title_activity_login">登录</string>
    <string name="login_tv_title">家校通</string>
    <string name="login_tv_username">学号</string>
    <string name="login_tv_password">密码</string>
    <string name="login_cb_rempwd">记住密码</string>
    <string name="login_cb_autologin">自动登录</string>
    <string name="login_cb_showpwd">显示密码</string>
    <string name="login_rb_tel">老师</string>
    <string name="login_rb_cer">家长</string>
    <string name="login_btn_submit">确定</string>
    <string name="login_btn_cancel">退出</string>
    <string name="title_activity_select">功能选择</string>
    <string name="test">10月17日晚7点30分，明德华兴中学青年教师培训学校2012——2013年学员结业典礼暨2013-2014年学员开学典礼在乐诚堂三楼多媒体教室举行。到场领导有：校长李启洪、校党委书记朱双华、副校长许韶欣以及教务主任龚乐妮、杨礼主任、黄主任，张建设主任主持了本次典礼。
首先，党委书记朱双华发表感言，宣布李慧、杨万强、李莺歌、马伊晴等学员顺利结业，其中，李慧、胡能兵、宁立梅、李莺歌等老师获得优秀学员称号。优秀学员代表胡能兵代表结业学员进行了讲话。在讲话中，胡能兵老师回顾了过往活动丰富的一年，讲述了每一位专家给他留下的深刻回忆，展示了自己在一年中所学到体会到的知识，最后，以一句“要用自己的人格影响学生”结束了精彩的发言，引起阵阵阵掌声。接下来，新学员代表杨奇老师以英语演讲的方式来了个精彩的讲话，表示了对学校培训的感谢，对青年教师对培训的需要作了说明，对今后一年的学习确定了目标，寄托了希望。学员代表发言结束后，许韶欣副校长还提出青年教师应多了解明德历史，学习明德精神，并讲到本学期的安排，对于师徒结对提出意见，鼓励青年教师多听课多学习。到此，2012——2013届学员结业典礼结束，李启洪校长开始为新学员上了以志存高远，追求卓越为中心的第一堂课。
课堂上，李校长为新学员在规划职业目标、确定职业目标、把握青年教师发展的一般过程、扩大职业视野、工作方法与技巧、培养自我素养等方面作了详细的指导。青年教师们仔细地聆听了李校严谨细致而又诙谐幽默的讲座，也都认真做好了笔记，在会后青年教师们纷纷表示李校的讲座有很大的实际意义。相信青年教师们在以后的培训讲座里面能学到更多的知识与经验，再结合自身的实际，都能成为优秀的人民教师，组成一支闪亮的华兴之师！</string>
    <string name="my_info_test">           基本信息     基本信息     基本信息     基本信息     基本信息</string>
    <string name="main_function">功能</string>
    <string name="mybaby_info">我的宝贝</string>
    <string name="my_info">我的信息</string>
    <string name="school_msg">学校通知</string>
    <string name="school_news">校园新闻</string>
    <string name="school_tasks">作业查看</string>
    <string name="settime">设定时间</string>
    <string name="school_today">在校表现</string>
    <string name="school_score">成绩查询</string>
    <string name="school_classMain">联系老师</string>
    <string name="parents_chat">家校互动</string>
    <string name="quickly_cut">建立快捷方式</string>
    <string name="main_page">校园主页</string>
    <string name="main_menu">主菜单</string>
    <string name="main_user">用户</string>
    <string name="main_collect">收藏</string>
    <string name="main_standard">退出</string>
    <string name="main_help">帮助</string>
    <string name="main_about">关于</string>
    <string name="username">用 户 名:</string>
    <string name="ip">服务器IP:</string>
    <string name="recode">历史聊天记录:</string>
    <string name="login">进入</string>
    <string name="leave">退出</string>
    <string name="send">发送</string>
    <string name="tv_courseName">科目</string>
    <string name="tv_courseScore">成绩</string>
    <string name="today">今日</string>
    <string name="history">记录</string>
    <string name="yestoday">昨日</string>
    <string name="test1">月考一</string>
    <string name="test2">期中考</string>
    <string name="test3">月考二</string>
    <string name="test4">期末考</string>
    <string name="p_loginname">登录名</string>
    <string name="p_name">真实名</string>
    <string name="p_sex">性别</string>
    <string name="p_relation">关系</string>
    <string name="p_job">工作</string>
    <string name="p_address">地址</string>
    <string name="p_tel">电话</string>
    <string name="tv_courseContent">作业内容</string>
    <string name="tv_taskfinishTime">完成时间</string>
    <string name="callback">返回</string>
    <string name="edit">编辑</string>
    <string name="reflesh">刷新</string>
    <string name="updatePwd">修改密码</string>
    <string name="about_message1">应用名称：家校通（家长端）</string>
    <string name="about_message2">开发者:xjl</string>
    <string name="about_message5">Help:注意最上方的图标，进行功能抽屉式拖动.</string>
    <string name="about_message3">谢谢使用家校通，如用户体验不佳或功能不完善请提出建议。我会尽快完善</string>
    <string name="about_message4">邮箱:junges521@163.com.</string>
    <string name="news_editor">责任编辑：</string>
    <string name="please_inputname">请输入用户名</string>
    <string name="please_inputpwd">"请输入密码 "</string>
    <string name="please_inputcontent">请输入消息内容,在这你可以输入100字</string>
    <string name="menu_settings">Settings</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="add_contact">加入通讯录</string>
    <string name="selectAccountLabel">Select</string>
    <string name="selectLabel">Select label</string>
    <string name="tool_school">进校查询</string>
    <string name="contactCreationFailure">add failure</string>
    <string name="undefinedTypeLabel">未定义</string>

</resources>