<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

       <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:orientation="vertical">
   
           <LinearLayout
       			android:layout_width="fill_parent"
       			android:layout_height="wrap_content"
       			android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
       			android:orientation="vertical">
               <TextView
                    android:layout_width="fill_parent"
       				android:layout_height="wrap_content"
       				android:textSize="15sp"
       				android:textColor="@color/green"
       				android:text="@string/about_message1"
                   ></TextView>
               <TextView
       			   android:layout_width="fill_parent"
       			   android:layout_height="wrap_content"
       			   android:textSize="15sp"
       			   android:textColor="@color/green"
                   android:text="@string/about_message2"/>
               <TextView
       			   android:layout_width="fill_parent"
       			   android:layout_height="wrap_content"
       			   android:textSize="15sp"
       			   android:textColor="@color/green"
                   android:text="@string/about_message5"/>
   		   </LinearLayout> 
   		   
 		 <LinearLayout
       			android:layout_width="fill_parent"
       			android:layout_height="wrap_content"
       			android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
       			android:orientation="vertical">
   			
               <TextView
                    android:layout_width="fill_parent"
       				android:layout_height="wrap_content"
       				android:textSize="15sp"
       				android:textColor="@color/green"
       				 android:text="@string/about_message3"
                   ></TextView>
               <TextView
       			   android:layout_width="fill_parent"
       			   android:layout_height="wrap_content"
       			   android:textSize="15sp"
       			   android:textColor="@color/green"
                   android:text="@string/about_message4"/>
   		   </LinearLayout>
   		
   	   </LinearLayout>
       
  
</LinearLayout>