<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/mycolor"
    android:orientation="vertical">

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_unit"
        android:padding="7dip" >

        <ImageView
            android:id="@+id/iv_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:clickable="true"
            android:src="@drawable/booklist_menu_normal" />

        <TextView
            android:id="@+id/tv_mainpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textColor="#000"
            android:layout_weight="0.8"
            android:text="@string/parents_chat"
            android:textSize="17dp" />

        <ImageView
            android:id="@+id/iv_right"
             android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:src="@drawable/back_normal" />
    </LinearLayout>
    
    <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
          <EditText
               android:id="@+id/server_ip"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:gravity="top" 
               android:layout_marginLeft="15dp"
               android:hint="ip地址"
               android:layout_marginRight="15dp"
               />
             <EditText
               android:id="@+id/server_port"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:gravity="top" 
               android:layout_marginLeft="15dp"
               android:hint="端口号"
               android:layout_marginRight="15dp"
               />
           

           <EditText
               android:id="@+id/message"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:gravity="top" 
               android:layout_marginLeft="15dp"
               android:hint="@string/please_inputcontent"
               android:layout_marginRight="15dp"
               />
           
        
       </LinearLayout>
    
       
             <TextView
            android:id="@+id/recode"
            android:text="@string/recode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            />
       
              <ListView 
        android:id="@+id/listhistoryview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        
        android:listSelector="#00000000"
        android:dividerHeight="3dp"
        android:scrollbars="none"/>
       

       
      
     
 
</LinearLayout>


    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    